[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/other/back/back.tscn" type="PackedScene" id=1]
[ext_resource path="res://textures/effect.png" type="Texture" id=2]
[ext_resource path="res://textures/menu/play.png" type="Texture" id=3]
[ext_resource path="res://textures/menu/store.png" type="Texture" id=4]
[ext_resource path="res://src/other/menu/menu.gd" type="Script" id=5]
[ext_resource path="res://textures/menu/x.png" type="Texture" id=6]
[ext_resource path="res://src/other/save/save.tscn" type="PackedScene" id=7]
[ext_resource path="res://textures/icon/header.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]

[node name="menu" type="Node2D"]
script = ExtResource( 5 )

[node name="back" parent="." instance=ExtResource( 1 )]

[node name="Sprite2" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Node2D" type="Node2D" parent="."]

[node name="play" type="TouchScreenButton" parent="Node2D"]
modulate = Color( 0.356863, 0.431373, 1, 1 )
position = Vector2( 35, 16 )
normal = ExtResource( 3 )
shape = SubResource( 1 )

[node name="exit" type="TouchScreenButton" parent="Node2D"]
modulate = Color( 0.67451, 0.196078, 0.196078, 1 )
position = Vector2( 52.5591, 20.6704 )
scale = Vector2( 0.415913, 0.415913 )
normal = ExtResource( 6 )

[node name="store" type="TouchScreenButton" parent="Node2D"]
modulate = Color( 0.67451, 0.196078, 0.196078, 1 )
position = Vector2( 23, 18 )
scale = Vector2( 0.75, 0.75 )
normal = ExtResource( 4 )

[node name="save" parent="." instance=ExtResource( 7 )]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 43.3317, 10.4799 )
scale = Vector2( 0.372879, 0.372879 )
texture = ExtResource( 8 )
[connection signal="pressed" from="Node2D/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Node2D/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Node2D/store" to="." method="_on_store_pressed"]
